--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,8 @@ plugins {
 group 'com.example'
 version '1.0-SNAPSHOT'
 
+
+
 repositories {
     mavenCentral()
 }
@@ -53,4 +55,12 @@ jlink {
 
 jlinkZip {
     group = 'distribution'
+}
+sourceSets {
+    test {
+        java {
+            srcDir 'src/test'
+        }
+    }
+
 }
