--- a/build.gradle
+++ b/build.gradle
@@ -59,7 +59,7 @@ jlinkZip {
 sourceSets {
     test {
         java {
-            srcDir 'src/test'
+            srcDir 'src/test/'
         }
     }
 
